# ecobalyse

./: .gitignore  README.md  countries.csv  docker-compose.yml  fabricProcess.json  make_build.sh  materials.csv  products.csv  products_details.json  pyproject.toml  requirements.txt  test.csv  test.db  test.py
add_product/: Dockerfile  add_product.py
airflow/dags/: ecobalyse.py  ecobalyse_extract.py  ecobalyse_training.py
api/: .dockerignore  .env.examples  Dockerfile  data_models.py  main.py  mongo_queries.py  redis_queries.py  requetes.txt  requirements.txt  test.json
api/api/: data_models.py  main.py  mongo_queries.py  requetes.txt
etape1_recolte_des_donnees/: api_ecobalyse.md  countries.json  create_indexes.py  create_mongodb.py  docker-compose.yml  get_data.py  get_json.py  materials.json  other_links.md  products.json  products_details.json  script_test.sh  test.py  test_mongodb.py
etape1_recolte_des_donnees/json/: fabricProcess.json  products_details.json
extraction/: Dockerfile  create_doc_collection.py  create_indexes.py  create_mongodb.py  get_data.py  get_json.py  make_all.sh  requirements.txt  test_mongodb.py
extraction/json/: products_details.json
mlflow-custom/: Dockerfile
requirements/: .env.examples
requirements/add_product/json/: exemple.json
requirements/redis/conf/: redis_7.2.conf
spark/: .dockerignore  .env.examples  Dockerfile  ecobalyse_data.csv  export_csv.py  mongo_module.py  requirements.txt  script_spk.py  train_model.py  train_model_bis.py
spark/scripts/: train_model.py
