[tool.poetry]
name = "ecobalyse"
version = "0.1.0"
description = ""
authors = ["Yajing <yajinghou33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
